--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,6 @@ Depends: perl,
  ppp,
  xl2tpd,
  pptpd,
- libradiusclient-ng2
+ libradcli4
 Description: Vyatta remote access VPN configuration/operational commands
  Vyatta configuration/operational templates and scripts for remote access VPN
